test/spec_vectors/local_set/fail/module_2.wat
(module (func $type-local-arg-num-vs-num (local i32) (local.set 0 (f32.const 0))))